--- a/css/estilos.css
+++ b/css/estilos.css
@@ -12,30 +12,36 @@ body{
 	font-family: 'Dancing Script', cursive;	
 }
 
+img{
+	box-shadow: 2px 2px 2px 2px #02010a;
+}
+
 header{
 	background-color: #5b7989;
 	border-radius: 10px 10px 0 0;
-	width: 100%;	
+	width: 100%;
+        height: 10vh;	
 	display: flex;
-	flex-direction: column;
+	flex-wrap: wrap;
+	align-items: center;
 }
 
 header h1{
 	color: white;
-	text-align: left;
-	text-shadow: 0 0 10px #02010a;
-	line-height: center;
+	text-shadow: 0 0 2px #02010a;
+	width: 50%;
+	padding: 0 2vw;
+}
+
+header nav {
+    width: 50%;
+	text-align: right;
 }
 
 nav a{
 	text-decoration: none;
-	text-align: right;
-	color: white;
-	padding: 0 10px;
-}
-
-nav {
-	text-align: right;
+	color: white;	
+	padding: 1vw;
 }
 
 #sect1{
@@ -53,15 +59,50 @@ nav {
 
 #sect2{
 	background-color: #d5c75f;
+	border: 1px;
+	width: 100%;
 	height: 400px;
 	display: flex;
-	flex-flow: row wrap;
-	justify-content: center;
 	align-items: center;
+}	
+
+#paisajes{
+	width: 50%;
+	
 }
 
-#sect2 img{
-	border: 1px solid black;
-	height: 80%;
-	margin: 0 auto;
+#retratos{
+	width: 50%;
+}
+
+#paisajes img{
+	width: 90%;
+	margin-left: 30px;
+	transition: 1s;
+}
+
+#retratos img{
+	width: 90%;
+	margin-left: 30px;
+	transition: 1s;
+}
+
+#paisajes img:hover{
+	transition: 1s; 
+	transform: rotate(10deg);
+	box-shadow: 2px 2px 2px 2px #82c3a6;
+}
+
+#retratos img:hover{
+	transition: 1s;
+	transform: translate(20px,-5px);
+	 box-shadow: 2px 2px 2px 2px #82c3a6;	
+}
+
+footer{
+    border-radius: 0 0 10px 10px;
+    background-color: #C6d5c5;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
 }
